docs: add imported connection endpoints and move connections to guides

--- a/advanced/dynamic-rules.mdx
+++ b/advanced/dynamic-rules.mdx
@@ -849,7 +849,7 @@ If you're migrating from a legacy signing implementation:
 	<Card title="Link API" icon="link" href="/api-reference/link/overview">
 		Establish user connections for signing
 	</Card>
-	<Card title="Connections" icon="user" href="/reference/connections">
+	<Card title="Connections" icon="user" href="/guides/connections">
 		Manage connection lifecycle
 	</Card>
 </CardGroup>
