--- a/api-reference/core/overview.mdx
+++ b/api-reference/core/overview.mdx
@@ -14,6 +14,7 @@ The Account API provides endpoints for managing your OFAuth account and connecti
 | `/v2/account/whoami` | GET | Get platform overview and account information |
 | `/v2/account/settings` | GET/PATCH | Organization-level settings |
 | `/v2/account/connections` | GET | List all connections |
+| `/v2/account/connections/import` | POST | Import an external connection |
 | `/v2/account/connections/{connectionId}` | DELETE | Disconnect a connection |
 | `/v2/account/connections/{connectionId}/invalidate` | POST | Force session expiration |
 | `/v2/account/connections/{connectionId}/settings` | GET/PATCH | Per-connection settings |
