--- a/reference/webhooks.mdx
+++ b/reference/webhooks.mdx
@@ -21,7 +21,7 @@ Configure in the [OFAuth Dashboard](https://app.ofauth.com/platform/developers/w
 |-------|---------|
 | `connection.created` | New connection established |
 | `connection.updated` | Connection details changed (e.g., reconnection with new permissions) |
-| `connection.expired` | Connection expired naturally, or [invalidated via API](/reference/connections#invalidate-connection) |
+| `connection.expired` | Connection expired naturally, or [invalidated via API](/guides/connections#invalidate-connection) |
 
 ### System Events
 
@@ -146,7 +146,7 @@ Verify by:
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Connections" icon="plug" href="/reference/connections">
+  <Card title="Connections" icon="plug" href="/guides/connections">
     Manage connection lifecycle
   </Card>
   <Card title="Error Handling" icon="triangle-exclamation" href="/reference/error-handling">
