--- a/guides/link.mdx
+++ b/guides/link.mdx
@@ -6,7 +6,7 @@ description: "Connect OnlyFans accounts securely using OFAuth Link"
 Connect OnlyFans accounts to your platform securely. OFAuth handles credentials on hosted pages—you receive a Connection ID for API access.
 
 <Warning>
-  **Use Sandbox for testing!** Before testing with real OnlyFans accounts, use [Sandbox test credentials](/getting-started/sandbox). Too many login attempts on production accounts can trigger OnlyFans "suspicious activity" detection.
+  **Use Sandbox for testing!** Before testing with real OnlyFans accounts, use [Sandbox test credentials](/setup/sandbox). Too many login attempts on production accounts can trigger OnlyFans "suspicious activity" detection.
 </Warning>
 
 ## Choose Your Integration
@@ -15,12 +15,13 @@ Connect OnlyFans accounts to your platform securely. OFAuth handles credentials 
   <Card title="Redirect Flow" icon="external-link" href="#redirect-flow">
     Redirect users to OFAuth's authentication pages. Simple to implement.
   </Card>
+
   <Card title="Popup Flow" icon="window" href="#popup-flow-embed-library">
     Show authentication in a popup. Best user experience.
   </Card>
 </CardGroup>
 
----
+***
 
 ## How It Works
 
@@ -44,7 +45,7 @@ sequenceDiagram
 3. **User authenticates** on OFAuth (2FA and captcha handled automatically)
 4. **Receive Connection ID** via callback URL or webhook
 
----
+***
 
 ## Prerequisites
 
@@ -52,15 +53,17 @@ sequenceDiagram
   <Step title="Get API Key">
     Get your API key from [OFAuth Dashboard > Developers > API Keys](https://app.ofauth.com/platform/developers/keys)
   </Step>
+
   <Step title="Configure Redirect URI">
     Add your callback URL to Allowed Redirect URIs in Dashboard > Developers > API
   </Step>
+
   <Step title="Set Permissions">
     Select which OnlyFans data your platform can access in Dashboard > Developers > API > User Data Permissions
   </Step>
 </Steps>
 
----
+***
 
 ## Redirect Flow
 
@@ -69,53 +72,51 @@ The simplest integration—redirect users to OFAuth's hosted authentication page
 ### Step 1: Create a Link Session
 
 <CodeGroup>
-
-```javascript Node.js
-const response = await fetch("https://api.ofauth.com/v2/link/init", {
-  method: "POST",
-  headers: {
-    apikey: "YOUR_API_KEY",
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    redirectUrl: "https://yourapp.com/callback",
-    clientReferenceId: "your-internal-user-id"
-  })
-})
-
-const { url } = await response.json()
-console.log("Send user to:", url)
-```
-
-```python Python
-import requests
-
-response = requests.post(
-    "https://api.ofauth.com/v2/link/init",
-    headers={
-        "apikey": "YOUR_API_KEY",
-        "Content-Type": "application/json"
+  ```javascript Node.js
+  const response = await fetch("https://api.ofauth.com/v2/link/init", {
+    method: "POST",
+    headers: {
+      apikey: "YOUR_API_KEY",
+      "Content-Type": "application/json"
     },
-    json={
-        "redirectUrl": "https://yourapp.com/callback",
-        "clientReferenceId": "your-internal-user-id"
-    }
-)
+    body: JSON.stringify({
+      redirectUrl: "https://yourapp.com/callback",
+      clientReferenceId: "your-internal-user-id"
+    })
+  })
 
-data = response.json()
-print("Send user to:", data["url"])
-```
+  const { url } = await response.json()
+  console.log("Send user to:", url)
+  ```
 
-```bash cURL
-curl -X POST https://api.ofauth.com/v2/link/init \
-  -H "apikey: YOUR_API_KEY" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "redirectUrl": "https://yourapp.com/callback",
-    "clientReferenceId": "your-internal-user-id"
-  }'
-```
+  ```python Python
+  import requests
 
+  response = requests.post(
+      "https://api.ofauth.com/v2/link/init",
+      headers={
+          "apikey": "YOUR_API_KEY",
+          "Content-Type": "application/json"
+      },
+      json={
+          "redirectUrl": "https://yourapp.com/callback",
+          "clientReferenceId": "your-internal-user-id"
+      }
+  )
+
+  data = response.json()
+  print("Send user to:", data["url"])
+  ```
+
+  ```bash cURL
+  curl -X POST https://api.ofauth.com/v2/link/init \
+    -H "apikey: YOUR_API_KEY" \
+    -H "Content-Type: application/json" \
+    -d '{
+      "redirectUrl": "https://yourapp.com/callback",
+      "clientReferenceId": "your-internal-user-id"
+    }'
+  ```
 </CodeGroup>
 
 **Response:**
@@ -129,11 +130,11 @@ curl -X POST https://api.ofauth.com/v2/link/init \
 
 ### Session Options
 
-| Option | Type | Description |
-|--------|------|-------------|
-| `redirectUrl` | string | Callback URL (must be in Allowed Redirect URIs) |
-| `clientReferenceId` | string | Your internal user ID for correlation |
-| `connectionId` | string | Existing connection ID to reconnect |
+| Option              | Type   | Description                                     |
+| ------------------- | ------ | ----------------------------------------------- |
+| `redirectUrl`       | string | Callback URL (must be in Allowed Redirect URIs) |
+| `clientReferenceId` | string | Your internal user ID for correlation           |
+| `connectionId`      | string | Existing connection ID to reconnect             |
 
 ### Step 2: Redirect User
 
@@ -168,15 +169,15 @@ if (status === "success" && connectionId) {
 
 ### Callback Parameters
 
-| Parameter | Description |
-|-----------|-------------|
-| `status` | `success`, `cancelled`, or `error` |
-| `connection_id` | The connection ID (on success) |
-| `client_reference_id` | Your internal ID (if provided) |
-| `step` | Where user cancelled: `pre-login`, `login`, `2fa` |
-| `error_code` | Error type: `session_expired`, `invalid_credentials`, `account_locked`, `2fa_failed` |
+| Parameter             | Description                                                                          |
+| --------------------- | ------------------------------------------------------------------------------------ |
+| `status`              | `success`, `cancelled`, or `error`                                                   |
+| `connection_id`       | The connection ID (on success)                                                       |
+| `client_reference_id` | Your internal ID (if provided)                                                       |
+| `step`                | Where user cancelled: `pre-login`, `login`, `2fa`                                    |
+| `error_code`          | Error type: `session_expired`, `invalid_credentials`, `account_locked`, `2fa_failed` |
 
----
+***
 
 ## Popup Flow (Embed Library)
 
@@ -185,17 +186,17 @@ Keep users in your app with a popup authentication experience.
 ### Installation
 
 <CodeGroup>
-```bash npm
-npm install @ofauth/link-embed
-```
+  ```bash npm
+  npm install @ofauth/link-embed
+  ```
 
-```html CDN
-<script
-  src="https://unpkg.com/@ofauth/link-embed/dist/embed.global.js"
-  defer
-  data-auto-init
-></script>
-```
+  ```html CDN
+  <script
+    src="https://unpkg.com/@ofauth/link-embed/dist/embed.global.js"
+    defer
+    data-auto-init
+  ></script>
+  ```
 </CodeGroup>
 
 ### JavaScript Library Usage
@@ -231,12 +232,12 @@ async function connectOnlyFans() {
 
 ### Configuration Options
 
-| Option | Type | Description |
-|--------|------|-------------|
-| `theme` | `'light' \| 'dark' \| 'auto'` | Theme for the interface (default: 'auto') |
-| `onSuccess` | `(metadata) => void` | Called when authentication succeeds |
-| `onClose` | `(metadata) => void` | Called when user closes the embed |
-| `onInvalidSession` | `() => void` | Called when session expires |
+| Option             | Type                          | Description                               |
+| ------------------ | ----------------------------- | ----------------------------------------- |
+| `theme`            | `'light' \| 'dark' \| 'auto'` | Theme for the interface (default: 'auto') |
+| `onSuccess`        | `(metadata) => void`          | Called when authentication succeeds       |
+| `onClose`          | `(metadata) => void`          | Called when user closes the embed         |
+| `onInvalidSession` | `() => void`                  | Called when session expires               |
 
 ### Success Metadata
 
@@ -280,7 +281,7 @@ interface SuccessMetadata {
 </script>
 ```
 
----
+***
 
 ## Use the Connection
 
@@ -298,7 +299,7 @@ const account = await response.json()
 console.log("Connected as:", account.name)
 ```
 
----
+***
 
 ## Reconnecting Expired Connections
 
@@ -320,7 +321,7 @@ const response = await fetch("https://api.ofauth.com/v2/link/init", {
 
 The existing connection is updated with fresh session data—same Connection ID, no duplicates.
 
----
+***
 
 ## Security Best Practices
 
@@ -328,18 +329,21 @@ The existing connection is updated with fresh session data—same Connection ID,
   <Card title="Server-Side Verification" icon="shield-check">
     Always verify session status server-side, never trust client-side data
   </Card>
+
   <Card title="HTTPS Only" icon="lock">
     Use HTTPS for all redirect URLs and API communications
   </Card>
+
   <Card title="Session Expiry" icon="clock">
     Link sessions expire after 1 hour. Create a new session if expired.
   </Card>
+
   <Card title="Allowed URIs" icon="list-check">
     Configure exact redirect URLs in your dashboard. No wildcards.
   </Card>
 </CardGroup>
 
----
+***
 
 ## Troubleshooting
 
@@ -347,18 +351,21 @@ The existing connection is updated with fresh session data—same Connection ID,
   <Accordion title="Session Expired">
     Link sessions expire after 1 hour. Create a new session with `/v2/link/init`.
   </Accordion>
+
   <Accordion title="Invalid Redirect URL">
     Add the URL to Allowed Redirect URIs in Dashboard > Developers > API.
   </Accordion>
+
   <Accordion title="Popup Blocked">
     Ensure the popup is triggered by a user action (click event), not automatically.
   </Accordion>
+
   <Accordion title="CSP/CORS Issues (Embed)">
     Add your domain to Allowed Origins in the OFAuth dashboard.
   </Accordion>
 </AccordionGroup>
 
----
+***
 
 ## Next Steps
 
@@ -366,6 +373,7 @@ The existing connection is updated with fresh session data—same Connection ID,
   <Card title="Handle Webhooks" icon="webhook" href="/reference/webhooks">
     Get notified when connections change
   </Card>
+
   <Card title="API Reference" icon="terminal" href="/api-reference/link/overview">
     Full Link API documentation
   </Card>
